20.sep (ws)
      - implement undo for tuplet properties change
      - updated instruments.xml from Magnus Johansson
      - new style values for arpeggios
      - allow to drag arpeggios
      - added vertical bracket line to arpeggio palette ("no arpeggio")
19.sep (ws)
      - Tuplet Properties: apply changes to all selected tuplets
18.sep (ws)
      - enhanced full measure rest layout
      - fix loading of drumset
17.sep (ws)
      - fix: "Two voices on same tone - render bug when repositioning"
      - changed the behaviour of multi measure rests
16.sep (ws)
      - fix "multi-voice" unison note heads jump"
      - fix track display in inspector
      - expose style parameter "show courtesy key signatures" in gui
      - generate courtesy key signatures
      (db)
      - add Brazilian Portuguese handbook
13.sep (ws)
      - remove buffer layer from fluid resulting in less midi jitter
12.sep (lv)
      - partially fix MusicXML regression test by suppressing layout info in convertermode
      (db)
      - break multi-measure rest on tempo text
      - initial work towards supporting Japanese handbook
11.sep (ws)
      - fix measure numbers when using multi measure rests
      - break multi measure rest on rehearsal mark
      - fix crash after removing instrument
10.sep (ws)
      - fix editing of simple text line element
      - use smaller beams for grace notes
      - fix input of rests with space key for voices > 1
9.sep (ws)
      - updated instruments.xml from Magnus Johansson
      - fix landscape page format preset
      - fix playback of slurs
      - fix portaudio configuration (device list always showed api 0 devices)
      - portaudio: fallback to default device on open error
      - add reverb parameter to synthesizer control
8.sep (ws)
      - fix crash after removing instruments
      - connect meter display in synthesizer control panel
7.sep (ws)
      - new control panel for synthesizer featuring an audio mixer for reverb/chorus/master