@@ -74,7 +74,7 @@ LanguageItem languages[] = {
       LanguageItem("it",    QT_TR_NOOP("Italiano")),
       LanguageItem("pl",    QT_TR_NOOP("Polski")),
       LanguageItem("pt",    QT_TR_NOOP("Português")),
-      LanguageItem("pt_BR", QT_TR_NOOP("Brasilian Português")),
+      LanguageItem("pt_BR", QT_TR_NOOP("Português brasileiro")),
       LanguageItem("ro",    QT_TR_NOOP("Română")),
       LanguageItem("ru",    QT_TR_NOOP("Русский")),
       LanguageItem("sv",    QT_TR_NOOP("Svenska")),
